name:                safedata-bson
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             PublicDomain
-- license-file:        LICENSE
author:              Philip Kamenarsky
maintainer:          p.kamenarsky@gmail.com
-- copyright:           
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Data.SafeData.Bson
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6 && <4.7,
                       bson,
                       safedata,
                       text,
                       vector
  hs-source-dirs:      src
  default-language:    Haskell2010
